crates/solidity/testing/snapshots/bindings_output/using/global_and_local/generated/v2/0.7.1-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or EnumKeyword or FunctionKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword or StructKeyword.
    ╭─[lib.sol:1:1]
    │
  1 │ ╭─▶ type Amount is uint64;
    ┆ ┆   
 13 │ ├─▶ }
    │ │       
    │ ╰─────── Error occurred here.
────╯

------------------------------------------------------------------------

Definitions (3):
- Def: #1 ["Test" @ main.sol:3:10] (contract)
- Def: #2 ["test" @ main.sol:6:14] (function, type: function () returns void)
- Def: #3 ["x" @ main.sol:7:16] (variable, type: unresolved)

------------------------------------------------------------------------

References (8):
- Ref: ["AmountLib" @ main.sol:4:11] -> unresolved
- Ref: ["Amount" @ main.sol:4:25] -> unresolved
- Ref: ["Amount" @ main.sol:7:9] -> unresolved
- Ref: ["x" @ main.sol:8:9] -> #3
- Ref: ["nop" @ main.sol:8:11] -> unresolved
- Ref: ["min" @ main.sol:8:17] -> unresolved
- Ref: ["x" @ main.sol:9:9] -> #3
- Ref: ["min" @ main.sol:9:11] -> unresolved

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 

------------------------------------------------------------------------

Bindings: 
   ╭─[main.sol:1:1]
   │
 3 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 4 │     using AmountLib for Amount;
   │           ────┬────     ───┬──  
   │               ╰───────────────── unresolved
   │                            │    
   │                            ╰──── unresolved
   │ 
 6 │     function test() public pure {
   │              ──┬─  
   │                ╰─── name: 2
 7 │         Amount x;
   │         ───┬── ┬  
   │            ╰────── unresolved
   │                │  
   │                ╰── name: 3
 8 │         x.nop().min();
   │         ┬ ─┬─   ─┬─  
   │         ╰──────────── ref: 3
   │            │     │   
   │            ╰───────── unresolved
   │                  │   
   │                  ╰─── unresolved
 9 │         x.min();
   │         ┬ ─┬─  
   │         ╰────── ref: 3
   │            │   
   │            ╰─── unresolved
───╯
